Bold fixme and todo comment tags.

--- a/index.less
+++ b/index.less
@@ -64,6 +64,12 @@
 
 .comment {
   color: @comment;
+
+  .storage.todo,
+  .storage.fixme {
+    color: @comment;
+    font-weight: 600;
+  }
 }
 
 .entity {
