Fix deprecated selectors.

--- a/index.less
+++ b/index.less
@@ -1,11 +1,7 @@
 @import "syntax-variables";
 
-.editor-colors {
-  background-color: @syntax-background-color;
-  color: @syntax-text-color;
-}
-
-.editor {
+atom-text-editor,
+:host {
   background-color: @syntax-background-color;
   color: @syntax-text-color;
 
@@ -308,6 +304,10 @@
   }
 }
 
-.editor.mini .scroll-view {
-  padding-left: 1px;
+
+atom-text-editor[mini],
+:host([mini]) {
+  .scroll-view {
+    padding-left: 1px;
+  }
 }
