Emphasize editor text with smaller line numbers.

--- a/index.less
+++ b/index.less
@@ -23,7 +23,10 @@ atom-text-editor,
     color: @syntax-gutter-text-color;
 
     .line-number {
+      font-size: .77em;
+      line-height: 1.95em;
       padding: 0 0.25em 0 0.5em;
+
       &.cursor-line {
         background-color: @syntax-gutter-background-color-selected;
         color: @syntax-gutter-text-color-selected;
