--- a/styles/colors.less
+++ b/styles/colors.less
@@ -9,14 +9,14 @@
 @white:           #ffffff; // 07
 
 // Colors
-@red:             #cc6666; // 08
+@red:             #b02428; // 08
 @orange:          #de935f; // 09
 @light-orange:    #f0c674; // 0A
 @green:           #b5bd68; // 0B
 @cyan:            #8abeb7; // 0C
 @blue:            #81a2be; // 0D
 @purple:          #b294bb; // 0E
-@dark-red:        #a3685a; // 0F
+@dark-red:        #89120a; // 0F
 
 // Low Key
 @invisible: rgb(127, 127, 127);
